--- a/PowerUp/app/src/main/res/values/strings.xml
+++ b/PowerUp/app/src/main/res/values/strings.xml
@@ -68,4 +68,6 @@
     <string name="start_title_message">Are you Sure ?</string>
     <string name="start_confirm_message">Create new Avatar</string>
     <string name="marcello_Text">Marcello</string>
+    <string name="game_to_map_message">If you migrate to map, current scene karma points will be lost</string>
+    <string name="game_confirm_message">Go to Map</string>
 </resources>
